# psutil_c_port

./: CMakeLists.txt  LICENSE  README.md  README_EN.md  example.c  example.py
.github/workflows/: c-cpp.yml
libpsutil/: CMakeLists.txt  psutil.c  psutil.h
libpsutil/arch/android/: psutil_android.c  psutil_android.h
libpsutil/arch/bsd/: psutil_bsd.c  psutil_bsd.h
libpsutil/arch/linux/: psutil_linux.c  psutil_linux.h
libpsutil/arch/macos/: psutil_macos.c  psutil_macos.h
libpsutil/arch/windows/: psutil_windows.c  psutil_windows.h
